--- a/job-listings/app/globals.css
+++ b/job-listings/app/globals.css
@@ -24,3 +24,23 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.input {
+  width: 100%;
+  padding: 0.5rem;
+  border: 1px solid #d1d5db; /* Tailwind's gray-300 */
+  border-radius: 0.25rem;
+}
+.btn {
+  width: 100%;
+  background-color: #3730A3;
+  color: #fff;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  border-radius: 0.25rem;
+  transition: background-color 0.2s;
+}
+.btn:hover {
+  background-color: #4f46e5; /* Tailwind's indigo-700 */
+  
+}
